[package]
name = "blender_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version ="1", features=["derive"]}
serde_json = "1.0.132"
tokio = {version="1.37.0", features=["macros", "rt-multi-thread", "fs"]}
